# fastapi-clean-architecture

./: README.md  main.py  pyproject.toml
api/: config.py  main.py  openapi.py  pyproject.toml  requirements.txt
api/data/: agent.yaml  plugins.yaml
api/servers/mcp/: memory_mcp_server.py
api/servers/worker/: math_agent_server.py  restaurant_booking_agent_server.py  travel_agent_server.py
api/src/agent/: chat_completion_agent.py  chat_stream_completion_agent.py  invoke_mcp_tools_chat_agent.py  orchestrator.py
api/src/application/: chat_message.py  chat_message_about_github.py  chat_message_stream.py  question_to_ai.py  start_orcestrator.py  user_service.py
api/src/mcp_plugin/: create_mcp_github_plugin.py  create_mcp_pugins.py
api/src/repository/: generate_chat_message.py  generate_chat_message_about_github.py  generate_chat_message_stream.py  get_agent.py  get_azure_openai_for_orchestrator.py  get_plugins.py
api/src/urls/: __init__.py  post_chat.py  post_chat_stream.py  post_mcp_github.py
api/src/utils/: check_tools_in_mcp.py  exception_handlers.py  get_current_user.py
api/test/application/: test_user_service.py
api/test/interface/: test_user_interface_service.py
api/test/utils/: test_exception_handlers.py  test_security.py
docs/: openapi.yaml
servers/mcp/: math_mcp_server.py  memory_mcp_server.py
servers/worker/: menu_agent_server.py
src/adapter/api/: __init__.py  get_users.py
src/dependencies/: user_dependencies.py
src/domain/models/: id.py  user.py
src/interface/: user_interface_service.py
src/utils/: decode_jwt.py  exceptions.py
(+19 files in other folders)
