[project]
name = "sample-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pytest>=8.4.1",
    "python-jose>=3.5.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]
